--- a/app/globals.css
+++ b/app/globals.css
@@ -18,12 +18,15 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  /* background :linear-gradient(
+    to bottom,
+    transparent,
+    rgb(var(--background-end-rgb))
+  )
+  rgb(var(--background-start-rgb)); */
+  background-image: url('/bg-3.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 @layer utilities {
